[gd_scene load_steps=2 format=3 uid="uid://c4gd0v4dt2fcg"]

[ext_resource type="Script" path="res://Scripts/UI/PlayerActionsMenu.gd" id="1_0d0eg"]

[node name="PlayerActions" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0d0eg")

[node name="Inventory" type="Button" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -100.0
offset_right = 175.0
grow_vertical = 0
focus_neighbor_right = NodePath("../Move")
text = "MY STUFF"

[node name="Move" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -175.0
offset_top = -200.0
offset_right = 175.0
grow_horizontal = 2
grow_vertical = 0
focus_neighbor_left = NodePath("../Inventory")
focus_neighbor_right = NodePath("../Map")
text = "MOVE"

[node name="Map" type="Button" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -175.0
offset_top = -100.0
grow_horizontal = 0
grow_vertical = 0
focus_neighbor_left = NodePath("../Move")
text = "MAP"

[connection signal="pressed" from="Inventory" to="." method="_on_inventory_pressed"]
[connection signal="pressed" from="Move" to="." method="_on_move_pressed"]
[connection signal="pressed" from="Map" to="." method="_on_map_pressed"]
